src/rules/flake8_annotations/snapshots/ruff__flake8_annotations__tests__allow_overload.snap
---
source: src/flake8_annotations/mod.rs
expression: checks
---
- kind:
    MissingReturnTypePublicFunction: bar
  location:
    row: 29
    column: 8
  end_location:
    row: 29
    column: 11
  fix: ~
  parent: ~

